--- a/package.json
+++ b/package.json
@@ -1,42 +1,87 @@
 {
   "name": "vue3-pagination",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "author": {
+    "email": "julian.printemps@gmail.com",
+    "name": "Julian Springaux"
+  },
   "description": "A Vue 3 component for pagination.",
-  "main": "dist/vue3-pagination.js",
+  "homepage": "https://github.com/julian-printemps/vue3-pagination",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/julian-printemps/vue3-pagination.git"
+  },
+  "bugs": {
+    "url": "https://github.com/julian-printemps/vue3-pagination/issues",
+    "email": "julian.printemps@gmail.com"
+  },
+  "license": "MIT",
+  "private": false,
+  "engines": {
+    "node": ">=10"
+  },
+  "keywords": [
+    "vue",
+    "vue 3",
+    "component",
+    "pagination"
+  ],
+  "main": "dist/vue3-pagination.cjs.js",
+  "module": "dist/vue3-pagination.esm.js",
+  "style": "dist/vue3-pagination.css",
+  "types": "dist/VPagination.vue.d.ts",
+  "files": [
+    "src/components",
+    "dist"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "rimraf ./dist && webpack --config ./webpack.config.js",
-    "lint": "vue-cli-service lint"
+    "build:demo": "vue-cli-service build",
+    "build:component": "rollup -c build/rollup.config.js"
   },
-  "author": "Julian Springaux",
-  "license": "MIT",
-  "dependencies": {
-    "@mapbox/stylelint-processor-arbitrary-tags": "^0.3.0",
-    "core-js": "^3.6.5",
-    "normalize.css": "^8.0.1",
-    "path": "^0.12.7",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-prettier": "^1.1.2",
-    "vue": "^3.0.0",
-    "webpack": "^5.10.3",
-    "webpack-merge": "^5.7.1"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.12.0",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "^7.12.0",
+    "@babel/preset-typescript": "^7.12.0",
+    "@rollup/plugin-alias": "^3.1.1",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
+    "@types/resize-observer-browser": "^0.1.4",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.7",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-typescript": "^4.5.7",
+    "@vue/cli-service": "^4.5.7",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
+    "core-js": "^3.6.5",
+    "cross-env": "^7.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
+    "minimist": "^1.2.5",
+    "node-sass": "^5.0.0",
     "prettier": "^1.19.1",
+    "rollup": "^2.28.2",
+    "rollup-plugin-postcss": "^3.1.8",
+    "rollup-plugin-scss": "^2.6.1",
+    "rollup-plugin-svg": "^2.0.0",
+    "rollup-plugin-typescript2": "^0.27.2",
+    "rollup-plugin-vue": "^6.0.0-beta.8",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3"
+    "sass-loader": "^10.0.5",
+    "typescript": "^4.0.3",
+    "vite": "^1.0.0-rc.4",
+    "vue": "^3.0.0",
+    "vue-svg-loader": "^0.17.0-beta.2"
+  },
+  "peerDependencies": {
+    "vue": "^3.0.0"
   }
 }
